style nav, fix issue with white space between image tags as used % for margin

--- a/styles/photoblog.css
+++ b/styles/photoblog.css
@@ -1,4 +1,16 @@
 img {
   width: 30%;
-  margin: 1%;
+  margin: 1.6666%;
+}
+
+nav {
+  text-transform: uppercase;
+  border-bottom: 2px solid #f1f1f1;
+  width: 70%;
+  margin-left: 1%;
+  padding: 1.1em 0;
+  margin-bottom: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 1.5em;
 }
